specs/001-typescript-to-zig-native/examples/valid/else-if.ts
let score = 11;

if (score < 5) {
  console.log("low");
} else if (score < 10) {
  console.log("mid");
} else {
  console.log("high");
}
