specs/001-typescript-to-zig-native/examples/invalid/else-if-condition-type.ts
let score = 11;

if (score < 5) {
  console.log("low");
} else if ("mid") {
  console.log("mid");
} else {
  console.log("high");
}
